<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkUsage</string>
    <string name="action_settings">Settings</string>
    <string name="number_hint">Phone Number</string>
    <string name="query">Query</string>
    <string name="usage">Usage</string>
    <string name="total">Total</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="valid_period">Valid Period</string>
    <string name="fetching_captcha">Fetching captcha</string>
    <string name="err_network">Network error</string>
    <string name="err_captcha">Captcha error</string>
    <string name="err_phone">Phone number error</string>
    <string name="querying">Querying</string>

</resources>